# scanopy

./: .gitignore  Makefile  TASK.md
backend/: Cargo.toml
backend/migrations/: 20260106000000_interface_mac_index.sql  20260106204402_entity_tags_junction.sql
backend/scripts/: fix_migration_data.sql
backend/src/daemon/runtime/: service.rs
backend/src/daemon/shared/: config.rs
backend/src/server/: mod.rs  openapi.rs
backend/src/server/auth/: handlers.rs  oidc.rs  service.rs
backend/src/server/auth/middleware/: auth.rs  features.rs  permissions.rs
backend/src/server/billing/: handlers.rs  service.rs
backend/src/server/bindings/: handlers.rs  service.rs
backend/src/server/bindings/impl/: storage.rs
backend/src/server/daemon_api_keys/: handlers.rs  service.rs
backend/src/server/daemon_api_keys/impl/: handlers.rs  storage.rs
backend/src/server/daemons/: handlers.rs  service.rs
backend/src/server/daemons/impl/: handlers.rs  storage.rs
backend/src/server/discovery/: handlers.rs  service.rs
backend/src/server/discovery/impl/: handlers.rs  storage.rs
backend/src/server/group_bindings/impl/: base.rs
backend/src/server/groups/: handlers.rs  service.rs
backend/src/server/groups/impl/: handlers.rs  storage.rs
backend/src/server/hosts/: handlers.rs  service.rs
backend/src/server/hosts/impl/: handlers.rs  storage.rs
backend/src/server/interfaces/: handlers.rs  service.rs
backend/src/server/interfaces/impl/: handlers.rs  storage.rs
backend/src/server/invites/: handlers.rs  service.rs
backend/src/server/invites/impl/: base.rs
backend/src/server/networks/: handlers.rs  impl.rs  service.rs
backend/src/server/organizations/: demo_data.rs  handlers.rs  service.rs
backend/src/server/organizations/impl/: handlers.rs  storage.rs
backend/src/server/ports/: handlers.rs  service.rs
backend/src/server/ports/impl/: storage.rs
backend/src/server/services/: handlers.rs  service.rs
backend/src/server/services/definitions/: mod.rs  peanut.rs  scanopy_daemon.rs  scanopy_server.rs  tinyauth.rs
backend/src/server/services/impl/: handlers.rs  storage.rs
backend/src/server/shared/: api_key_common.rs  entities.rs  mod.rs  validation.rs
backend/src/server/shared/events/: types.rs
backend/src/server/shared/extractors/: mod.rs  query.rs
backend/src/server/shared/handlers/: factory.rs  openapi_macros.rs  query.rs  traits.rs
backend/src/server/shared/services/: entity_tags.rs  factory.rs  mod.rs  traits.rs
backend/src/server/shared/storage/: entity_tags.rs  factory.rs  filter.rs  generic.rs  mod.rs  tests.rs  traits.rs
backend/src/server/shared/types/: api.rs  examples.rs
backend/src/server/shares/: handlers.rs  service.rs
backend/src/server/shares/impl/: base.rs
backend/src/server/subnets/: handlers.rs  service.rs
backend/src/server/subnets/impl/: handlers.rs  storage.rs
backend/src/server/tags/: handlers.rs  service.rs
backend/src/server/tags/impl/: storage.rs
backend/src/server/topology/: handlers.rs
backend/src/server/topology/service/: main.rs
backend/src/server/topology/types/: handlers.rs  storage.rs
backend/src/server/user_api_keys/: handlers.rs  service.rs
backend/src/server/user_api_keys/impl/: handlers.rs  network_access.rs  storage.rs
backend/src/server/users/: handlers.rs  service.rs
backend/src/server/users/impl/: base.rs  handlers.rs  network_access.rs  permissions.rs
backend/src/tests/: daemon_config.json  scanopy.sql
backend/src/tests/compat/: replay.rs
backend/src/tests/compat/fixtures/v0.13.1/: daemon_to_server.json  server_to_daemon.json
backend/tests/integration/: crud.rs  infra.rs  main.rs  permissions.rs  validations.rs
docs/design/: api-versioning.md
messages/: de.json  pt.json
ui/: .prettierignore  package-lock.json  package.json
ui/src/lib/api/: client.ts  query-client.ts  schema.d.ts
ui/src/lib/data/: billing-plans.json  features.json
ui/src/lib/features/auth/components/: LoginModal.svelte  RegisterModal.svelte
ui/src/lib/features/daemon_api_keys/: queries.ts
ui/src/lib/features/daemons/: queries.ts
ui/src/lib/features/discovery/: queries.ts
ui/src/lib/features/groups/: queries.ts
ui/src/lib/features/hosts/: queries.ts
ui/src/lib/features/networks/: queries.ts
ui/src/lib/features/services/: queries.ts
ui/src/lib/features/settings/: AccountTab.svelte  BillingTab.svelte  OrganizationTab.svelte  SettingsModal.svelte
ui/src/lib/features/shares/: queries.ts
ui/src/lib/features/subnets/: queries.ts
ui/src/lib/features/tags/: queries.ts
ui/src/lib/features/topology/: queries.ts  state.ts
ui/src/lib/features/user_api_keys/: queries.ts
ui/src/lib/features/users/: queries.ts
ui/src/lib/paraglide/: runtime.js
ui/src/lib/paraglide/messages/: apikeys_rotatekey2.js  apikeys_rotatewarningbody3.js  apikeys_rotatewarningtitle3.js  apikeys_savekeynowbody4.js  apikeys_savekeynowtitle4.js  auth_backtologin2.js  auth_checkyouremail2.js  auth_createaccountwith2.js  auth_createaccountwithemail3.js  auth_createyouraccount2.js  auth_creatingaccount1.js  auth_demomodebody2.js  auth_demomodetitle2.js  auth_donthaveaccount2.js  auth_enteryouremail2.js  auth_enteryourpassword2.js  auth_forgotyourpassword2.js  auth_gotologin2.js  auth_passwordresetcomplete2.js  auth_passwordupdatedbody2.js  auth_passwordupdatedtitle2.js  auth_registerhere1.js  auth_resetlinksentbody3.js  auth_resetlinksenttitle3.js  auth_resetpassword1.js  auth_resetpasswordinstructions2.js  auth_resetpasswordtitle2.js  auth_scanopylogo1.js  auth_sendresetlink2.js  auth_setnewpassword2.js  auth_signingin1.js  auth_signintoscanopy3.js  auth_signinwith2.js  auth_signinwithemail3.js  auth_signupforupdates3.js  auth_termsandprivacy2.js  auth_youreallsetbodymultiple4.js  auth_youreallsetbodysingle4.js  auth_youreallsettitle3.js  auth_youreinvitedbody2.js  (+837 more)
ui/src/lib/shared/: types.ts
ui/src/lib/shared/stores/: metadata.ts
ui/src/routes/: +page.svelte
ui/src/routes/onboarding/: +page.svelte
ui/static/: openapi-public.json  openapi.json  schema.mermaid  services.json
(+67 files in other folders)
