[package]
name = "scanopy-server"
version = "0.12.7"
edition = "2024"
description = "Scanopy HTTP API server"

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "scanopy"
path = "src/lib.rs"

# Release profile optimizations for smaller, faster binaries
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization  
codegen-units = 1   # Better optimization, slower compile
panic = "abort"     # Smaller binaries, no unwinding
strip = true        # Remove debug symbols

# Development profile for faster builds
[profile.dev]
opt-level = 0       # No optimization for faster builds
debug = true        # Keep debug symbols for debugging
lto = false         # No LTO for faster builds
incremental = true  # Enable incremental compilation

# Dependencies grouped by purpose for better maintainability
[dependencies]
# === Web Server Framework ===
axum = "0.8.6"
tower = "0.4.13" 
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "set-header"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "fs", "signal", "process"] }

# === Database ===
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "ipnetwork", "mac_address"] }

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === Core Utilities ===
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# === Networking ===
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls", "cookies"] }
snmp2 = { version = "0.4.8", features = ["tokio"] }
pnet = "0.35.0"
ipnetwork = "0.20"
cidr = { version = "0.3.1", features = ["serde"] }
if-addrs = "0.14.0"
dns-lookup = "3.0.0"

# === Network Protocol Support ===
rsntp = "4.0.0"
dhcproto = "0.13.0"

# === TLS and Security ===
rustls = "0.21"
webpki-roots = "0.25"
base64ct = "=1.6.0"

# === Configuration and Logging ===
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
figment = { version = "0.10", features = ["json", "env", "toml"] }

# === CLI ===
clap = { version = "4.0", features = ["derive"] }

# === File and MIME handling ===
mime_guess = "2.0"
async-fs = "2.1.3"

# === Async utilities ===
async-trait = "0.1"
futures = "0.3"
tokio-util = "0.7.16"

# === System Information ===
hostname = "0.4.1"
local-ip-address = "0.6.5"
mac_address = { version = "1.1.8", features = ["serde"] }
mac_oui = { version = "0.4.11", features = ["with-db"] }
directories-next = "2.0.0"

# === Data Structures and Algorithms ===
petgraph = { version = "0.8.2", features = ["serde-1"] }
itertools = "0.14.0"

# === Code Generation and Macros ===
strum = "0.27.2"
strum_macros = "0.27.2"
paste = "1.0"
inventory = "0.3.21"

# === OpenAPI Documentation ===
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }

# === Utilities ===
fastrand = "2.3.0"
url = "2.5.7"
rand = "0.9.2"
lucide-icons = { version = "0.562", features = ["serde"] }

# === Dynamic Types Support ===
dyn-clone = "1.0.20"
dyn-hash = "0.2.2"
dyn-eq = "0.1.3"
ipgen = "1.0.2"
validator = { version = "0.20", features = ["derive"] }
regex = "1.11.3"
tempfile = "3.23.0"
net-route = "0.4.6"
bollard = { version = "0.19.4", features = ["ssl"] }
httparse = "1.10.1"
async-stream = "0.3.6"
serial_test = "3.2.0"
postgres = "0.19.12"
tower-sessions = "0.14.0"
tower-sessions-core = "0.14.0"
tower-sessions-memory-store = "0.14.0"
argon2 = "0.5.3"
password-hash = "0.5.0"
lazy_static = "1.5.0"
rand_core = "0.9.3"
axum-extra = { version = "0.10.3", features = ["cookie", "typed-header"] }
time = "0.3.44"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
secrecy = "0.10.3"
sha2 = "0.10.9"
hex = "0.4.3"
tokio-cron-scheduler = "0.15.1"
axum-macros = "0.5.0"
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest", "rustls-tls"] }
oauth2 = { version = "5.0.0", default-features = false, features = ["rustls-tls"] }
email_address = "0.2.9"
urlencoding = "2.1.3"
rlimit = "0.10.2"
libc = "0.2.177"
async-stripe = { version = "1.0.0-alpha.2", default-features = false, features = ["rustls-tls-webpki-roots"] }
async-stripe-core = { version = "1.0.0-alpha.2", default-features = false,features = ["customer"] }
async-stripe-product = { version = "1.0.0-alpha.2", default-features = false,features = ["product", "price"] }
async-stripe-billing = { version = "1.0.0-alpha.2", default-features = false,features = ["plan", "subscription", "deserialize", "serialize", "billing_portal_session"] }
async-stripe-checkout = { version = "1.0.0-alpha.2", default-features = false,features = ["checkout_session"] }
async-stripe-types = { version = "1.0.0-alpha.2", default-features = false }
async-stripe-webhook = { version = "1.0.0-alpha.2", default-features = false }
moka = { version = "0.12.11", features = ["future"] }
nanoid = "0.4.0"
serde_with = "3.15.1"
lettre = { version = "0.11.19", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-rustls", "ring", "webpki-roots"] }
html2text = "0.16.4"
json_value_merge = "2.0.1"
axum-client-ip = "1.1.3"
governor = "0.10.2"
bad_email = "0.1.1"
hickory-resolver = { version = "0.25.2" }

# === Platform-specific Dependencies ===
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16" }

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation"
]}

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
walkdir = "2.5"
tar = "0.4"
testcontainers = "0.25.0"
top-english-words = "1.1.1"
comrak = "0.48.0"

[features]
generate-fixtures = []
commercial = []
